# ardrone_object_tracking

./: .gitmodules  drone.launch
checkColor/: CMakeLists.txt  package.xml
checkColor/include/: bounding_box.hpp  checkColor.hpp
checkColor/src/: checkColor.cpp  checkColorMain.cpp
control/: CMakeLists.txt  package.xml
control/include/: camera.hpp  uavControl.hpp
control/msg/: ColorMsg.msg
control/src/: uavControl.cpp  uavControlMain.cpp
logger/: CMakeLists.txt  package.xml
logger/include/: datatosave.hpp  logger.hpp
logger/src/: logger.cpp  loggerMain.cpp
